--- a/config.toml
+++ b/config.toml
@@ -18,7 +18,7 @@ google_tag_manager_id = ""
 
   [params.homepage_meta_tags]
   meta_description = "Business Template 1 a modern business theme for Hugo. It contains content types for the archetypical business website. The theme is fully responsive, blazing fast and artfully illustrated."
-  meta_og_title = "Hugo Serif Theme"
+  meta_og_title = "Business Template 1"
   meta_og_type = "website"
   meta_og_url = "https://hugo-serif.netlify.app"
   meta_og_image = "https://raw.githubusercontent.com/JugglerX/hugo-serif-theme/master/images/tn.png"
