--- a/config.toml
+++ b/config.toml
@@ -22,7 +22,7 @@ google_tag_manager_id = ""
   meta_og_type = "website"
   meta_og_url = "BusinessTemplate1"
   meta_og_image = "Business Template 1"
-  meta_og_description = "Serif is a modern business theme for Hugo. It contains content types for the archetypical business website. The theme is fully responsive, blazing fast and artfully illustrated."
+  meta_og_description = "Business Template 1"
   meta_twitter_card = "summary"
   meta_twitter_site = "@zerostaticio"
   meta_twitter_creator = "@zerostaticio"
