--- a/data/contact.yaml
+++ b/data/contact.yaml
@@ -1,3 +1,3 @@
-email: 'hugoserif@example.com'
-phone: '1800 123 000'
-contact_button_link: 'contact'
+email: Business Template 1@example.com
+phone: 1800 123 000
+contact_button_link: contact
